# sbc-asus-tinker-t

./: .gitignore  Makefile  Makefile.am  README.md  blink.py  bootstrap.sh  configure.ac  requirements.txt
src/: Makefile.am  blink.py  franklin.py
src2/: Makefile.am  README.md  classify_image.py  ntlk_setup.py  requirements.txt  tinker_setup.sh
src3/: installer.sh  requirements.txt  tf3_test.py
tests/: README.md  tf2-test.py
